--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div class="list-group">
               <div class="list-group-item">
                 <div class="col-md-5">
-                  {{input type="text" class="form-control" placeholder="First Name" value=firstName}}
+                  {{input type="text" class="form-control input-sm" placeholder="First Name" value=firstName}}
                 </div>
                 <div class="col-md-5">
-                  {{input type="text" class="form-control" placeholder="Last Name" value=lastName}}
+                  {{input type="text" class="form-control input-sm" placeholder="Last Name" value=lastName}}
                 </div>
                 <button class="btn btn-success btn-sm" {{action "createInterviewee"}}
                   {{bind-attr disabled=disabled}}>Add</button>
@@ -69,7 +69,7 @@
             <div class="list-group">
               <div class="list-group-item">
                 <button class="btn btn-primary btn-sm" {{action "createInterview"}}>
-                  Add
+                  New
                 </button>
               </div>
               {{#each interviews}}
@@ -89,26 +89,60 @@
 
     <script type="text/x-handlebars" data-template-name="interviewees/interviews/information">
       <div class="container-fluid">
-        <div class="row-fluid">
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <div class="panel-title">Interviewers</div>
-            </div>
-            <div class="panel-body">
-              <ul class="list-unstyled">
-                {{#each interviewers}}
-                  <li>{{firstName}} {{lastName}}</li>
-                {{/each}}
-              </ul>
-              <button class="btn btn-primary btn-sm" {{action "createInterviewee"}}
-                 {{bind-attr disabled=disabled}}>Add Exercise
-               </button>
+        <div class="row">
+          <div class="col-md-5">
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <div class="panel-title">Interviewers</div>
+              </div>
+              <div class="panel-body">
+                <ul class="list-unstyled">
+                  {{#each interviewers}}
+                    <li>{{firstName}} {{lastName}}</li>
+                  {{/each}}
+                </ul>
+                <form class="form-inline">
+                  {{view 'select'
+                         content=allInterviewers
+                         optionValuePath="content.id"
+                         optionLabelPath="content.lastName"
+                         prompt="Select an interviewer"
+                         class="form-control input-sm"
+                         selection=newInterviewer}}
+                  <button class="btn btn-primary btn-sm" {{action "addInterviewer"}}
+                     {{bind-attr disabled=disabled}}>Add
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
+          <div class="col-md-7">
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <div class="panel-title">New Interview Exercise</div>
+              </div>
+              <div class="panel-body">
+                <form class="form-inline">
+                  {{view 'select'
+                         contentBinding=allExercises
+                         optionValuePath="content.objectId"
+                         optionLabelPath="content.title"
+                         prompt="Select an exercise"
+                         class="form-control input-sm"
+                         selection=exercise}}
+                  {{input type="text" class="form-control input-sm" placeholder="Mark" value=mark}}
+                  <button class="btn btn-primary btn-sm" {{action "addInterviewExercise"}}
+                    {{bind-attr disabled=disabled}}>Add</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
           {{#each interviewExercises}}
             <div class="panel panel-success">
               <div class="panel-heading">
-                <div class="panel-title">{{exercise.title}} <span class="badge">{{mark}}</span></div>
+                <div class="panel-title">{{exercise.title}} [{{exercise.type}}] <span class="badge">{{mark}}</span></div>
               </div>
               <div class="panel-body">
                 <p>{{exercise.description}}</p>
@@ -122,14 +156,40 @@
     <script type="text/x-handlebars" data-template-name="exercises">
       <div class="container-fluid">
         <div class="row-fluid">
+          <div class="panel panel-success">
+            <div class="panel-heading">
+              <div class="panel-title">New Exercise</div>
+            </div>
+            <div class="panel-body">
+              <form class="form-inline">
+                <div class="form-group">
+                  {{input type="text" class="form-control" placeholder="Title" value=title}}
+                </div>
+                <div class="form-group">
+                  {{textarea rows="5" cols="40" class="form-control" placeholder="Description" value=description}}
+                </div>
+                {{view 'select'
+                       contentBinding=App.ExerciseTypes.FIXTURES
+                       optionValuePath="content.name"
+                       optionLabelPath="content.name"
+                       prompt="Select a type"
+                       class="form-control"
+                       selection=exerciseType}}
+                <button class="btn btn-primary btn-sm" {{action "createExercise"}}
+                  {{bind-attr disabled=disabled}}>Create</button>
+              </form>
+            </div>
+          </div>
           <div class="list-group">
             {{#each model}}
-              <div class="panel panel-success pull-left">
-                <div class="panel-heading">
-                  <div class="panel-title">{{title}}</div>
-                </div>
-                <div class="panel-body">
-                  <p>{{description}}</p>
+              <div class="col-md-4">
+                <div class="panel panel-success">
+                  <div class="panel-heading">
+                    <div class="panel-title">{{title}} [{{type}}]</div>
+                  </div>
+                  <div class="panel-body">
+                    <p>{{description}}</p>
+                  </div>
                 </div>
               </div>
             {{/each}}
@@ -159,9 +219,12 @@
     <script src="js/models/exercise.js"></script>
     <script src="js/models/interviewer.js"></script>
     <script src="js/models/interview_exercise.js"></script>
+    <script src="js/models/exercise_types.js"></script>
 
     <!-- Controllers -->
     <script src="js/controllers/interviewees_controller.js"></script>
     <script src="js/controllers/interviewees_interviews_controller.js"></script>
+    <script src="js/controllers/interviewees_interviews_information_controller.js"></script>
+    <script src="js/controllers/exercises_controller.js"></script>
   </body>
 </html>
